some changes added2

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -16,7 +16,13 @@ body {
 }
 
 .beer-block {
-	margin: 10px;
+	margin: 20px;
+	text-align: left;
+	border: 3px solid #DDD;
+}
+
+.beer-form {
+	margin: 20px;
 	text-align: left;
 }
 
