--- a/app/assets/javascripts/templates/list.html
+++ b/app/assets/javascripts/templates/list.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-12 beer-block">
+	<div class="col-md-12 beer-form">
 		<form>
 		  <div class="form-group">
 		    <label for="beerName">Beer Name</label>
@@ -8,7 +8,7 @@
 		<button type="submit" class="btn btn-default" ng-click="search()">Search</button>
 		</form>
 		<div ng-show="beers" ng-repeat="beer in beers track by $index">
-			<table class="table table-striped">
+			<table class="table table-striped beer-block">
 			 	<tr>
 			    	<td>Name:</td>
 			    	<td>{{beer.name}}</td>
@@ -20,10 +20,6 @@
 			    <tr>
 			    	<td>Category:</td>
 			    	 <td>{{categories[beer.cat_id-1]}}</td>
-			    </tr>
-			    <tr>
-			    	<td>Style:</td>
-			    	<td>{{beer.style_id}}</td>
 			    </tr>
 			    <tr>
 			    	<td>Description:</td>
