--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,24 +8,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="/">BeersQuizz App</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
-
     <div class="container">
       <div class="starter-template">
         <h1>Beers Quizz</h1>
         <img class="logo" src="/assets/beerblue.png">
        	<div ng-view></div>
       </div>
-
-    </div><!-- /.container -->
+    </div>
 </div>
+
